baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__grep_tests__grep_case_insensitive_text_search.snap
---
source: crates/baml_lsp2_actions/src/grep_tests.rs
expression: output
---
types.baml:2│ class Point {  ← Definition { kind: Class }
funcs.baml:2│ function MakePoint(x: int, y: int) -> Point {
funcs.baml:3│ return Point { x: x, y: y };
