baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__grep_tests__grep_enum_symbol.snap
---
source: crates/baml_lsp2_actions/src/grep_tests.rs
expression: output
---
── enum ── types.baml:7
shape: enum Color {
    Red
    Green
    Blue
}
refs: 1
  funcs.baml:6  function ReadColor(c: Color) -> string {
