baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__grep_tests__grep_text_search_with_matches.snap
---
source: crates/baml_lsp2_actions/src/grep_tests.rs
expression: output
---
funcs.baml:3│ return Point { x: x, y: y };
