baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__grep_tests__list_symbols_snapshot.snap
---
source: crates/baml_lsp2_actions/src/grep_tests.rs
expression: output
---
Point                class types.baml
Color                enum types.baml
MakePoint            function funcs.baml
ReadColor            function funcs.baml
